fix(content-service): add test plan, fix lint issues, and add Allure annotations - Create comprehensive TEST_PLAN.md with 78+ test cases and detailed scenarios - Fix all 17 SonarQube lint issues:   * AssignmentServiceTest: 11 issues (extract constants, fix .get(0) calls)   * SkillServiceTest: 3 issues (use JAVA_SKILL_NAME, ADVANCED_JAVA_NAME constants)   * TutorialServiceTest: 3 issues (use JAVA_BASICS_TITLE, JAVA_ADVANCED_TITLE constants) - Add Allure Framework annotations (54+ total):   * @Epic('Content Service') on all 3 test classes   * @Feature on all 3 test classes (Assignment/Skill/Tutorial Management)   * @Story on 18+ nested test groups   * @Severity on 78+ test methods (CRITICAL/NORMAL)   * @Description on all test methods - Code coverage: 84.3% (AssignmentService 82.3%, SkillService 86.1%, TutorialService 84.5%) - All 75+ tests passing, build successful